--- a/index.html
+++ b/index.html
@@ -202,6 +202,38 @@ li {
             "244 2h sdt ",
             "Thu, lấy cho chị 1 chai 244",
             "E ơi, chốt mã 244 cho C, 1 chai",
+            "Cho cho co 244 ",
+            "Cho cô 244 1 chai",
+            "cho chị 1 chai mã 244",
+            "244 1 chai",
+            "lấy luôn cho e mã 244",
+            "mã 244 1 chai",
+            "mã 244",
+            "Mã 244",
+            "cho chị 244",
+            "lấy chị 244",
+            "cho chị mã 244 ",
+            "chốt chị mã 244 ",
+            "chị mua 244 nhé",
+            "cho cô mã 244 ",
+            "cho dì mã 244 ",
+            "chế lấy 244 3chai",
+            "bác muốn mua mã 244 5 chai",
+            "cô mua thêm 244 4chai nha con",
+            " 244 shop ơi",
+            "mua hàng nhà chị nhiều quá rồi mà ưng lắm lấy e thêm mã 244 nha",
+            "chốt chị mã 244 ",
+            "cho chị 1 chai mã 244",
+            "244 1 bộ",
+            "lấy luôn cho e mã 244",
+            "mã 244 1 chai",
+            "nhà em xài hoài luôn, lấy e 244  thêm nha ",
+            "lấy anh 244",
+            "cho chị mã 244 ",
+            "chốt chị mã 244 ",
+            "em mua 244 nhé",
+            " 244 shop ơi",
+            "1 mã 244 nhé shop",
         ];
 
         let comments = [...originalComments];
